# genetic-tic-tac-toe

./: .gitignore  genetic-tick-tack-toe.cabal  geneticalgorithmsinhaskellwithpolytypicprogramming.ps  stack.yaml
.stack-work/install/x86_64-linux/lts-3.14/7.10.2/pkgdb/: package.cache
app/: Main.hs
lib/: sortedCombos827.txt  tictactoeCombos412.txt  tictactoeCombos827.txt  tictactoeCombos850.txt
log/: 1-hour-v2.txt  17-hour-test.txt  7-hour-test.txt  complete-log-1-hour-v2.txt  log-2016-01-22-12:51:42.txt  log-2016-01-22-12:59:49.txt  log-2016-01-22-13:25:12.txt  log-2016-01-22-13:25:49.txt  log-2016-01-22-13:27:41.txt  log-2016-01-22-13:41:21.txt  log-2016-01-22-14:56:44.txt  log-2016-01-22-20:05:38.txt  log-2016-01-22-20:15:15.txt  log-2016-01-22-20:40:25.txt  log-2016-01-22-20:58:09.txt
log/2016-01-23-11:16:01/: log-2016-01-23-11:16:01.txt
log/2016-01-23-23:05:20/: log-2016-01-23-23:05:20.txt
log/2016-01-23-23:14:31/: log-2016-01-23-23:14:31.txt
log/2016-01-24-00:02:51/: log-2016-01-24-00:02:51.txt
log/2016-01-24-11:55:13/: log-2016-01-24-11:55:13.txt
log/2016-01-24-15:56:13/: log-2016-01-24-15:56:13.txt
log/2016-01-24-15:56:31/: log-2016-01-24-15:56:31.txt
log/2016-01-24-15:58:41/: log-2016-01-24-15:58:41.txt
log/2016-01-24-16:02:27/: log-2016-01-24-16:02:27.txt
log/2016-01-24-17:21:31/: log-2016-01-24-17:21:31.txt
src/: Assets.hs  Board.hs  BoardCreator.hs  BoardLib.hs  BoardTypes.hs  BoardUtils.hs  Crossover.hs  Genetic.hs  Player.hs  SimpleLogger.hs
src/Board/: Creator.hs  Types.hs  Utils.hs
