name:                genetic-tick-tack-toe
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cirquit/genetic-tick-tack-toe#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BoardTypes
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable genetic-tick-tack-toe-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , genetic-tick-tack-toe
  default-language:    Haskell2010

test-suite genetic-tick-tack-toe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , genetic-tick-tack-toe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: http://github.com/cirquit/genetic-tick-tack-toe
